Bug 422356 - Umbrello code importer does not import c++ header file wrapped with __cplusplus macro
Summary: Umbrello code importer does not import c++ header file wrapped with __cpluspl...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 2.30.3 (KDE releases 19.12.3)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-02 08:39 UTC by Prasun
Modified: 2020-06-02 10:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.31.2 (KDE releases 20.04.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Prasun 2020-06-02 08:39:20 UTC
SUMMARY
Umbrello code importer does not define __cplusplus macro during import

STEPS TO REPRODUCE
1. Import any CPP header file wrapped with __cplusplus macro
2. 
3. 

OBSERVED RESULT
The declarations wrapped such are not imported

EXPECTED RESULT
All declarations should be imported

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2020-06-02 10:05:59 UTC
Git commit 592064a33e5563575ae946ca44366c4bbac1eec7 by Ralf Habacker.
Committed on 02/06/2020 at 10:05.
Pushed by habacker into branch 'release/20.04'.

Fix 'Umbrello code importer does not import c++ header file wrapped with __cplusplus macro'

The macro '__cplusplus' is now defined by the c++ importer.
FIXED-IN:2.31.2 (KDE releases 20.04.2)

M  +3    -0    lib/cppparser/driver.cpp

https://invent.kde.org/sdk/umbrello/commit/592064a33e5563575ae946ca44366c4bbac1eec7