Fix 'Umbrello code importer does not import c++ header file wrapped with __cplusplus macro'

The macro '__cplusplus' is now defined by the c++ importer.

BUG:422356
FIXED-IN:2.31.2 (KDE releases 20.04.2)